Change from html to js & html

--- a/multiplayer-lobby.html
+++ b/multiplayer-lobby.html
@@ -25,7 +25,7 @@
     <script src="assets/js/migration.js"></script>
 
     <!-- Zentrale GameState Klasse -->
-    <script src="assets/js/gamestate.js"></script>
+    <script src="assets/js/GameState.js"></script>
 
     <style>
         * {
