Change from html to js & html

--- a/multiplayer-difficulty-selection.html
+++ b/multiplayer-difficulty-selection.html
@@ -13,6 +13,7 @@
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
     <!-- DOMPurify for XSS Protection -->
@@ -609,6 +610,6 @@
 </div>
 
 <!-- External Page Script (MUST load AFTER DOM is ready) -->
-<script src="/assets/js/multiplayer-difficulty.js"></script>
+<script src="/assets/js/multiplayer-difficulty-selection.js"></script>
 </body>
 </html>
