Change from html to js & html

--- a/multiplayer-lobby.html
+++ b/multiplayer-lobby.html
@@ -22,10 +22,10 @@
             crossorigin="anonymous"></script>
 
     <!-- Migration Script (lÃ¤uft automatisch) -->
-    <script src="migration.js"></script>
+    <script src="assets/js/migration.js"></script>
 
     <!-- Zentrale GameState Klasse -->
-    <script src="GameState.js"></script>
+    <script src="assets/js/GameState.js"></script>
 
     <style>
         * {
@@ -833,6 +833,6 @@
 </div>
 
 <!-- External JavaScript (NO INLINE SCRIPTS!) -->
-<script src="multiplayer-lobby.js"></script>
+<script src="assets/js/multiplayer-lobby.js"></script>
 </body>
 </html>
