Change from html to js & html

--- a/multiplayer-lobby.html
+++ b/multiplayer-lobby.html
@@ -755,7 +755,7 @@
     <div class="glass-card">
         <!-- Header -->
         <div class="header">
-            <h1>ðŸŒ Multiplayer Lobby</h1>
+            <h1>Multiplayer Lobby</h1>
             <p>Warte auf andere Spieler oder starte das Spiel</p>
         </div>
 
@@ -773,7 +773,7 @@
             </div>
 
             <div class="game-settings">
-                <div class="settings-title">âš™ï¸ Spieleinstellungen</div>
+                <div class="settings-title">Spieleinstellungen</div>
 
                 <div class="setting-row">
                     <div class="setting-header">Schwierigkeit</div>
@@ -792,7 +792,7 @@
         <!-- Players Section -->
         <div class="players-section">
             <div class="players-header">
-                <h3 class="players-title">ðŸ‘¥ Spieler</h3>
+                <h3 class="players-title">Spieler</h3>
                 <div class="player-count" id="player-count">0/8 Spieler</div>
             </div>
             <div class="players-list" id="players-list">
@@ -804,7 +804,7 @@
 
         <!-- Join Info -->
         <div class="join-info">
-            <div class="join-title">ðŸ”— Andere einladen</div>
+            <div class="join-title">Andere einladen</div>
             <div class="join-description">
                 Teile den Einladungslink mit deinen Freunden, damit sie direkt beitreten kÃ¶nnen.
             </div>
@@ -813,20 +813,20 @@
         <!-- Controls -->
         <div class="controls">
             <button class="btn btn-outline btn-host-only" id="settings-btn">
-                âš™ï¸ Einstellungen Ã¤ndern
+                Einstellungen Ändern
             </button>
             <button class="btn btn-secondary" id="share-btn">
-                ðŸ”— Einladung teilen
+                Einladung teilen
             </button>
             <button class="btn btn-primary" id="start-btn">
-                ðŸš€ Spiel starten
+                Spiel starten
             </button>
         </div>
 
         <!-- Footer Links -->
         <div class="footer-links">
-            <a href="imprint.html" class="footer-link">ðŸ“‹ Impressum</a>
-            <a href="privacy.html" class="footer-link">ðŸ”’ Datenschutz</a>
+            <a href="imprint.html" class="footer-link">Impressum</a>
+            <a href="privacy.html" class="footer-link">Datenschutz</a>
         </div>
     </div>
 </div>
