Change from html to js & html

--- a/multiplayer-lobby.html
+++ b/multiplayer-lobby.html
@@ -806,7 +806,7 @@
         <div class="join-info">
             <div class="join-title">Andere einladen</div>
             <div class="join-description">
-                Teile den Einladungslink mit deinen Freunden, damit sie direkt beitreten kÃ¶nnen.
+                Teile den Einladungslink mit deinen Freunden, damit sie direkt beitreten können.
             </div>
         </div>
 
