--- a/join-game.html
+++ b/join-game.html
@@ -517,18 +517,18 @@
 <!-- Age Gate Overlay -->
 <div class="age-gate-overlay" id="age-gate">
     <div class="age-gate-content">
-        <div class="age-gate-icon">ðŸ”ž</div>
-        <h2 class="age-gate-title">AltersbestÃ¤tigung</h2>
+        <div class="age-gate-icon">👨‍👩‍👧‍👦</div>
+        <h2 class="age-gate-title">Altersbestätigung</h2>
         <p class="age-gate-text">
-            Diese App enthÃ¤lt Inhalte, die fÃ¼r Erwachsene bestimmt sind.<br>
+            Diese App enthält Inhalte, die für Erwachsene bestimmt sind.<br>
             Bist du mindestens 18 Jahre alt?
         </p>
         <div class="age-gate-buttons">
             <button class="age-gate-btn age-gate-btn-yes" onclick="confirmAge(true)">
-                âœ“ Ja, ich bin 18+
+                Ja, ich bin 18+
             </button>
             <button class="age-gate-btn age-gate-btn-no" onclick="confirmAge(false)">
-                âœ— Nein
+                Nein, ich bin unter 18
             </button>
         </div>
     </div>
@@ -548,7 +548,7 @@
     <div class="glass-card">
         <!-- Header -->
         <div class="header">
-            <h1>ðŸŽ® Spiel beitreten</h1>
+            <h1>Spiel beitreten</h1>
             <p>Gib den Spiel-Code und deinen Namen ein</p>
         </div>
 
@@ -571,7 +571,7 @@
 
             <!-- Game Info Preview -->
             <div class="game-info-preview" id="game-info">
-                <div class="info-title">âœ… Spiel gefunden!</div>
+                <div class="info-title">Spiel gefunden!</div>
 
                 <div class="host-info">
                     <div class="host-label">Host</div>
@@ -617,10 +617,10 @@
         <!-- Controls -->
         <div class="controls">
             <button class="btn btn-outline" onclick="goBack()">
-                â† ZurÃ¼ck
+                Zurück
             </button>
             <button class="btn btn-primary" id="join-btn" onclick="joinGame()" disabled>
-                ðŸš€ Beitreten
+                Beitreten
             </button>
         </div>
     </div>
