--- a/multiplayer-gameplay.html
+++ b/multiplayer-gameplay.html
@@ -1165,8 +1165,8 @@
     <a href="privacy.html" style="color: rgba(255,255,255,0.6); font-size: 0.75rem; text-decoration: none;">Datenschutz</a>
 </div>
 
-<!-- DOMPurify CDN -->
-<script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"></script>
+<!-- DOMPurify CDN -- crossorigin="anonymous" referrerpolicy="no-referrer">
+<script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <!-- Core Scripts in correct order -->
 <script src="/assets/js/migration.js"></script>
