--- a/multiplayer-lobby.html
+++ b/multiplayer-lobby.html
@@ -16,9 +16,9 @@
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
-    <!-- DOMPurify fÃ¼r XSS-Schutz -->
+    <!-- DOMPurify fÃ¼r XSS-Schutz -- crossorigin="anonymous" referrerpolicy="no-referrer">
     <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Migration Script (lÃ¤uft automatisch) -->
     <script src="assets/js/migration.js"></script>
